# LibAFL_hw2

./: .gitmodules  README.md
LibAFL-main/: .gitignore
LibAFL-main/fuzzers/: README.md
LibAFL-main/fuzzers/baby_fuzzer/.svn/: wc.db
LibAFL-main/fuzzers/baby_fuzzer/src/: main.rs
LibAFL-main/fuzzers/baby_fuzzer_test/: Cargo.toml
LibAFL-main/fuzzers/baby_fuzzer_test/src/: main.rs
LibAFL-main/fuzzers/fran/: Cargo.toml  Makefile.toml  README.md  run.sh  run_fuzz.py  uc.py
LibAFL-main/fuzzers/fran/corpus/: 2351f12ec21e7f34  25001da268155293  300ebf1dcc93adc5  925e1883a994dc5c  c92b5ba46598fc42
LibAFL-main/fuzzers/fran/src/: fuzzer.rs  main.rs  valueObserver.rs
LibAFL-main/fuzzers/frankenstein/: Cargo.toml  README.md  frankenstein.md
LibAFL-main/fuzzers/frankenstein/corpus/: testcase.txt
LibAFL-main/fuzzers/frankenstein/doc/: coverage.md  frankenstein.md
LibAFL-main/fuzzers/frankenstein/src/: gen.rs  main.rs  main_qemu.rs
LibAFL-main/libafl_qemu/: build_linux.rs
frankenstein-dev/: .gitignore  data.json  db.sqlite3  run_fuzz.py
frankenstein-dev/core/: uc.py
frankenstein-dev/frankensteinWebUI/: urls.py  views.py
frankenstein-dev/include/frankenstein/: hook.h  utils.h
frankenstein-dev/include/frankenstein/BCMBT/: hci.h
frankenstein-dev/include/frankenstein/threadx/: threading.h
frankenstein-dev/projects/CYW20735B1/emulation/: acl_fuzz.c  bcs.h  execute.c  (+6 more)
frankenstein-dev/test-dev/: test.py  test.txt
frankenstein-dev/tests/: run-all.sh
frankenstein-dev/tests/hook_test/: Makefile  project.json
my-frankenstein/frankensteinWebUI/: urls.py
(+1 files in other folders)
