[package]
name = "fran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../../libafl/", features = ["qemu_cli"]  }
libafl_qemu = { path = "../../libafl_qemu/", features = ["arm", "usermode"] }