[package]
name = "fran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../../libafl/" }
serde = { version ="1.0.104", features = ["derive"] }
serde_json ="1.0.48"
# libafl = { path = "../../libafl/", features = ["qemu_cli"]  }
# libafl_qemu = { path = "../../libafl_qemu/", features = ["arm", "usermode"] }